@@ -1,3 +1,8 @@
+2005-03-23  Joseph S. Myers  <joseph@codesourcery.com>
+
+	* cp-tree.h (perform_integral_promotions): Remove.
+	(default_conversion): Add.
+
 2005-03-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* parser.c (cp_parser_warn_min_max): New function.
